# twitter-bot

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.py
src/ai/: personality.json  tweet_generator.py  tweets.json
src/auth/: oauth_handler.py
src/bot_logger/: logger.py
src/twitter/: post_tweet.py
src/utils/: helper.py  selenium_setup.py
