
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "twitter-bot"
version = "0.1.0"
description = "A sophisticated Twitter bot with personality-driven content generation"
authors = ["Yash Potdar <yashyogeshpotdar7@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "*"
requests = "*"
requests_oauthlib = "*"
python-dotenv = "*"
webdriver-manager = "*"
google-generativeai = "*"
scikit-learn = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^22.0"
flake8 = "^4.0"
mypy = "^0.9"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
